# SyLC

./: README.md  SyLC.py  SyLC_3D_Player.py  SyLC_Player.spec  analyze.py  bd3d_offset_metadata.py  bluray_disc.py  build_add_icon.py  build_exe.bat  build_exe_onefile.bat  disc_archiver.py  fast_mkv_subtitle_extractor.py  framepacking_widget_d3d11.py  framepacking_window_d3d11.py  fullscreen_manager.py  hevc_decode_thread.py  hevc_stereo_detect.py  keyboard_actions.py  lavf_h264_demuxer.py  lavf_hevc_source.py  monitoring_overlay.py  mvc_decoder.py  mvc_demuxer_cpp.cp313-win_amd64.pyd  mvc_demuxer_cpp.cp314-win_amd64.pyd  mvhevc_exporter.py  pgs_subtitle_parser.py  premium_controls_overlay.py  pyproject.toml  requirements.txt  setup.py  subtitle_depth_analyzer.py  subtitle_extractor.py  subtitle_manager.py  text_subtitle_renderer.py  thumbnail_service.py  velvet_probe.py  vexu_injector.py
edge264/: LICENSE_BSD.txt  edge264.h
edge264/src/: edge264.c  edge264_bitstream.c  edge264_deblock.c  edge264_headers.c  edge264_inter.c  edge264_internal.h  edge264_intra.c  edge264_mvpred.c  edge264_residual.c  edge264_sei.c  edge264_slice.c  edge264_test.c  edge264_test2.c
mvc_realtime_demuxer/: CMakeLists.txt
mvc_realtime_demuxer/include/: frame_ring_buffer.h  h264_nal_parser.h  m2ts_reader.h  matroska_reader.h  mvc_decoder.h  mvc_demuxer.h  mvc_m2ts_demuxer.h  mvc_matroska_demuxer.h  mvc_ssif_demuxer.h  native_renderer.h  ssif_parser.h
mvc_realtime_demuxer/python/: python_bindings.cpp
mvc_realtime_demuxer/src/: frame_ring_buffer.cpp  h264_nal_parser.cpp  m2ts_reader.cpp  matroska_reader.cpp  matroska_reader.h  mingw_compat.cpp  mvc_decoder.cpp  mvc_demuxer.cpp  mvc_m2ts_demuxer.cpp  mvc_matroska_demuxer.cpp  mvc_ssif_demuxer.cpp  native_renderer.cpp  native_renderer_shaders.h  ssif_parser.cpp
native_renderer/: __init__.py  gen_shader_header.py  native_framepack_widget.py  native_tap.py  smoke_test_s1.py  smoke_test_s2.py  smoke_test_s3.py
native_renderer/shaders/: yuv_framepack.frag.glsl.ref  yuv_framepack.frag.hlsl  yuv_framepack.vert.hlsl
